# dofek

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README-install.txt  README.md  SECURITY.md  build-all.ps1  build-all.sh  dev-gui.sh  dofek.toml.example  install-wt-profile.ps1
.cargo/: config.toml
.claude/skills/version-bump/: SKILL.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/dofek-plugin-protocol/: Cargo.toml
crates/dofek-plugin-protocol/src/: lib.rs
docs/: Dofek-Remotion-Video.md  manual.html  tabby-integration.md  v0.3-plugin-system.md  v1.2-macos-support.md  v1.3-tray-companion.md  v1.4-update-check.md  v1.5-plugin-showcase.md
gui/: Cargo.toml  com.dofek.app.metainfo.xml  tauri.conf.json
gui/capabilities/: default.json
gui/docs/: dofek-concept-v2.html
gui/frontend/: index.html
gui/icons/: icon.icns
gui/src/: lib.rs  main.rs  tray.rs
gui/wix/: manual-shortcut.wxs  tui-shortcut.wxs
plugins/: README.md  mock-plugin.py
plugins/dofek-docker/: Cargo.toml  README.md
plugins/dofek-docker/src/: main.rs
plugins/dofek-net-ping/: Cargo.toml  README.md
plugins/dofek-net-ping/src/: main.rs
plugins/dofek-ollama/: Cargo.toml  README.md
plugins/dofek-ollama/src/: main.rs
src/: app.rs  config.rs  event.rs  lib.rs  main.rs  settings.rs  telemetry.rs  update.rs
src/data/: ai_detect.rs  disk.rs  gpu.rs  lhm.rs  mod.rs  network.rs  process.rs  rapl.rs  sysinfo_source.rs
src/plugin/: cli.rs  mod.rs  process.rs  protocol.rs  store.rs
src/ui/: about.rs  area_chart.rs  bottom_strip.rs  candlestick.rs  chart.rs  cpu.rs  footer.rs  gpu.rs  header.rs  help.rs  horizon_chart.rs  memory.rs  mod.rs  network_disk.rs  process_table.rs  sparkline_buf.rs  status.rs  theme.rs  ticker.rs  update.rs  watchlist.rs
video/: .gitignore  package-lock.json  package.json  tsconfig.json
video/public/: README.md
video/src/: Root.tsx
video/src/compositions/: HeroSpot60.tsx  VerticalShort30.tsx
video/src/scenes/: 00_PulseOpen.tsx  01_Problem.tsx  02_Candlestick.tsx  03_AIAware.tsx  04_CrossPlatform.tsx  05_DualUI.tsx  06_Plugins.tsx  07_Tray.tsx  08_CTA.tsx
video/src/ui/: AreaChart.tsx  Candlestick.tsx  MetricPill.tsx  Panel.tsx  ProcessRow.tsx  Theme.ts  TickerBar.tsx
website/: index.html  package-lock.json  package.json  robots.txt  sitemap.xml
website/admin/: index.html
website/api/v1/: events.js
website/api/v1/admin/: _helpers.js  auth.js  features.js  overview.js  trends.js  versions.js
website/plugins/: index.html  playground.js  style.css
