[workspace]
members = ["gui"]

[package]
name = "dofek"
version = "0.2.0"
edition = "2024"
description = "Terminal-native system monitor for Windows — AI-aware, visually stunning"

[[bin]]
name = "dofek-tui"
path = "src/main.rs"

[lib]
name = "dofek"
path = "src/lib.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP client (blocking, no TLS needed — LHM is localhost only)
ureq = { version = "2", default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# NVIDIA GPU (dynamic loading — gracefully fails if no NVIDIA)
nvml-wrapper = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# System info (CPU, memory, processes — no elevation needed)
sysinfo = "0.33"

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"
dirs = "6.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Security",
    "Win32_System_Performance",
] }

[profile.release]
lto = true
strip = true
opt-level = 3
