[workspace]
members = [
    "crates/dofek-plugin-protocol",
    "gui",
    "plugins/dofek-ollama",
    "plugins/dofek-docker",
    "plugins/dofek-net-ping",
]

[package]
name = "dofek"
version = "1.5.1"
edition = "2024"
description = "Terminal-native system monitor for Windows, Linux, and macOS (Apple Silicon) — AI-aware, visually stunning"

[[bin]]
name = "dofek-tui"
path = "src/main.rs"

[lib]
name = "dofek"
path = "src/lib.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP client (blocking, no TLS needed — LHM is localhost only)
ureq = { version = "2", features = ["native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# NVIDIA GPU (dynamic loading — gracefully fails if no NVIDIA)
nvml-wrapper = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# System info (CPU, memory, processes — no elevation needed)
sysinfo = "0.38"

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"
dirs = "6.0.0"
uuid = { version = "1", features = ["v4"] }

# Plugin protocol — shared with plugins/* and external authors.
dofek-plugin-protocol = { path = "crates/dofek-plugin-protocol", version = "0.1.0" }

# Local time formatting (cross-platform; replaces the OS-specific clock blocks)
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Security",
    "Win32_System_Performance",
    "Wdk_System_SystemServices",
] }

[profile.release]
lto = true
strip = true
opt-level = 3
