[package]
name = "dofek-gui"
version = "1.3.4"
edition = "2024"
description = "Dofek desktop GUI — trading-terminal system monitor"

[dependencies]
dofek = { path = ".." }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tiny-skia = "0.11"

# tauri-plugin-single-instance: dedupes Win/Linux launches. macOS bundle launches
# are already serialized by LaunchServices, so the plugin would be redundant —
# and its build path on darwin requires extra plumbing — so it's gated off.
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
strip = true
opt-level = 3
