[package]
name = "dofek-docker"
version = "0.1.0"
edition = "2024"
description = "Dofek plugin: Docker container status and resource monitoring"

[[bin]]
name = "dofek-docker"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false }
