[package]
name = "dofek-ollama"
version = "0.1.0"
edition = "2024"
description = "dofek plugin: Ollama model status and inference tracking"

[[bin]]
name = "dofek-ollama"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false }
